@@ -7,19 +7,18 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
-import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @ControllerAdvice
-public class GlobalExceptionHandler {
+public class ExceptionHandler {
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @org.springframework.web.bind.annotation.ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<ExceptionResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        // Validation 에러 처리
+
         List<String> errors = ex.getBindingResult().getAllErrors().stream()
                 .map(error -> {
                     if (error instanceof FieldError) {
@@ -27,7 +26,7 @@ public class GlobalExceptionHandler {
                     } else {
                         return error.getDefaultMessage() != null ? error.getDefaultMessage() : "알 수 없는 에러";
                     }
-                }).collect(Collectors.toList());
+                }).toList();
 
         ExceptionResponse exceptionResponse = new ExceptionResponse(
                 HttpStatus.BAD_REQUEST.value(),
@@ -38,19 +37,29 @@ public class GlobalExceptionHandler {
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(exceptionResponse);
     }
 
-    @ExceptionHandler(GlobalException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ResponseEntity<ExceptionResponse> handleGlobalException(GlobalException ex) {
-        // GlobalException 에러 처리
-        List<String> errors = List.of(ex.getMessage());
+    @org.springframework.web.bind.annotation.ExceptionHandler(NotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ResponseEntity<ExceptionResponse> handleGlobalException(NotFoundException ex) {
 
         ExceptionResponse exceptionResponse = new ExceptionResponse(
                 HttpStatus.BAD_REQUEST.value(),
-                "Goodong Web Exception",
-                errors
+                "Goodong Global Exception",
+                ex.getMessage()
         );
 
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(exceptionResponse);
+    }
+
+    @org.springframework.web.bind.annotation.ExceptionHandler(UnAuthorizedException.class)
+    @ResponseStatus(HttpStatus.UNAUTHORIZED)
+    public ResponseEntity<ExceptionResponse> handleAuthorizeException(UnAuthorizedException ex) {
+        ExceptionResponse exceptionResponse = new ExceptionResponse(
+                HttpStatus.BAD_REQUEST.value(),
+                "Goodong UnAuthorized Exception",
+                ex.getMessage()
+        );
+
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(exceptionResponse);
     }
 
     @Setter
@@ -58,7 +67,14 @@ public class GlobalExceptionHandler {
     public static class ExceptionResponse {
         private int status;
         private String message;
+        private String error;
         private List<String> errors;
+
+        public ExceptionResponse(int status, String message, String error) {
+            this.status = status;
+            this.message = message;
+            this.error = error;
+        }
 
         public ExceptionResponse(int status, String message, List<String> errors) {
             this.status = status;
